; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci_pci.c_pcib_is_nonprefetch_open.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci_pci.c_pcib_is_nonprefetch_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcib_softc = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pcib_softc*)* @pcib_is_nonprefetch_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pcib_is_nonprefetch_open(%struct.pcib_softc* %0) #0 {
  %2 = alloca %struct.pcib_softc*, align 8
  store %struct.pcib_softc* %0, %struct.pcib_softc** %2, align 8
  %3 = load %struct.pcib_softc*, %struct.pcib_softc** %2, align 8
  %4 = getelementptr inbounds %struct.pcib_softc, %struct.pcib_softc* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp sgt i64 %5, 0
  br i1 %6, label %7, label %15

7:                                                ; preds = %1
  %8 = load %struct.pcib_softc*, %struct.pcib_softc** %2, align 8
  %9 = getelementptr inbounds %struct.pcib_softc, %struct.pcib_softc* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load %struct.pcib_softc*, %struct.pcib_softc** %2, align 8
  %12 = getelementptr inbounds %struct.pcib_softc, %struct.pcib_softc* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = icmp slt i64 %10, %13
  br label %15

15:                                               ; preds = %7, %1
  %16 = phi i1 [ false, %1 ], [ %14, %7 ]
  %17 = zext i1 %16 to i32
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
